--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- ----- HEADER ----- -->
     <header class="head">
-      <div class="container">
+      <div class="container header-container">
         <!-- header nav -->
         <nav class="head-nav">
           <a href="./index.html" class="head-logo"
@@ -56,6 +56,11 @@
             </li>
           </ul>
         </address>
+        <button data-menu-open class="mobile-head-btn" type="button">
+          <svg class="mobile-head-icon" width="32" height="22">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -64,11 +69,18 @@
       <!-- hero -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-main">Effective Solutions for Your Business</h1>
-          <button type="button" class="hero-btn" data-modal-open>
-            Order Service
-          </button>
+          <div class="hero-container">
+            <h1 class="hero-main">Effective Solutions for Your Business</h1>
+            <button type="button" class="hero-btn" data-modal-open>
+              Order Service
+            </button>
+          </div>
         </div>
+      </section>
+
+      <!-- mobile frame -->
+      <section class="under-hero-frame">
+        <div class="under-hero-container"></div>
       </section>
 
       <!-- about us -->
@@ -456,6 +468,73 @@
       </div>
     </footer>
 
+    <!----- MOBILE MENU ----->
+
+    <div class="mobile-menu" data-menu>
+      <div class="container mobile-menu-container">
+        <button data-menu-close type="button" class="mobile-close-btn">
+          <svg class="mobile-close-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-nav">
+          <ul class="mobile-nav-menu">
+            <li class="mobile-nav-items">
+              <a href="./index.html" class="mobile-nav-link">Studio</a>
+            </li>
+            <li class="mobile-nav-items">
+              <a href="./portfolio.html" class="mobile-nav-link">Portfolio</a>
+            </li>
+            <li class="mobile-nav-items">
+              <a href="" class="mobile-nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="mobile-address-menu">
+          <li class="mobile-address-items">
+            <a href="mailto:info@devstudio.com" class="mobile-contacts"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="mobile-address-items">
+            <a href="tel:+110001111111" class="mobile-contacts"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-social-menu">
+          <li class="mobile-social-items">
+            <a href="" class="mobile-social-link">
+              <svg class="mobile-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-items">
+            <a href="" class="mobile-social-link">
+              <svg class="mobile-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-items">
+            <a href="" class="mobile-social-link">
+              <svg class="mobile-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-items">
+            <a href="" class="mobile-social-link">
+              <svg class="mobile-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <!----- MODAL ----->
     <div class="modal-container">
       <div class="backdrop is-hidden" data-modal>
@@ -552,5 +631,6 @@
 
     <!--- script --->
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
