--- a/index.html
+++ b/index.html
@@ -78,11 +78,6 @@
         </div>
       </section>
 
-      <!-- mobile frame -->
-      <section class="under-hero-frame">
-        <div class="under-hero-container"></div>
-      </section>
-
       <!-- about us -->
       <section class="about">
         <div class="container">
@@ -480,7 +475,7 @@
         <nav class="mobile-nav">
           <ul class="mobile-nav-menu">
             <li class="mobile-nav-items">
-              <a href="./index.html" class="mobile-nav-link">Studio</a>
+              <a href="./index.html" class="mobile-nav-link active">Studio</a>
             </li>
             <li class="mobile-nav-items">
               <a href="./portfolio.html" class="mobile-nav-link">Portfolio</a>
