--- a/portfolio.html
+++ b/portfolio.html
@@ -373,7 +373,9 @@
               <a href="./index.html" class="mobile-nav-link">Studio</a>
             </li>
             <li class="mobile-nav-items">
-              <a href="./portfolio.html" class="mobile-nav-link">Portfolio</a>
+              <a href="./portfolio.html" class="mobile-nav-link active"
+                >Portfolio</a
+              >
             </li>
             <li class="mobile-nav-items">
               <a href="" class="mobile-nav-link">Contacts</a>
