--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <ul class="digital-menu">
             <li class="digital-items">
               <img
+                srcset="./images/img1@2x.jpg 2x"
                 src="./images/img1.jpg"
                 alt="laptop"
                 width="360"
@@ -149,6 +150,7 @@
             </li>
             <li class="digital-items">
               <img
+                srcset="./images/img2@2x.jpg 2x"
                 src="./images/img2.jpg"
                 alt="phones"
                 width="360"
@@ -157,6 +159,7 @@
             </li>
             <li class="digital-items">
               <img
+                srcset="./images/img3@2x.jpg 2x"
                 src="./images/img3.jpg"
                 alt="phoneonhand"
                 width="360"
@@ -174,6 +177,7 @@
           <ul class="team-menu">
             <li class="team-list">
               <img
+                srcset="./images/mark@2x.jpg 2x"
                 src="./images/mark.jpg"
                 alt="Mark"
                 width="264"
@@ -215,7 +219,13 @@
               </div>
             </li>
             <li class="team-list">
-              <img src="./images/tom.jpg" alt="Tom" width="264" height="260" />
+              <img
+                srcset="./images/tom@2x.jpg 2x"
+                src="./images/tom.jpg"
+                alt="Tom"
+                width="264"
+                height="260"
+              />
               <div class="team-container">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -253,6 +263,7 @@
             </li>
             <li class="team-list">
               <img
+                srcset="./images/camila@2x.jpg 2x"
                 src="./images/camila.jpg"
                 alt="Camila"
                 width="264"
@@ -295,6 +306,7 @@
             </li>
             <li class="team-list">
               <img
+                srcset="./images/dan@2x.jpg 2x"
                 src="./images/dan.jpg"
                 alt="Daniel"
                 width="264"
