--- a/portfolio.html
+++ b/portfolio.html
@@ -95,12 +95,37 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card1.jpg"
-                    alt="banking app"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img.jpg    1x,
+                        ./images/desktop-portfolio/desk-img@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img@2x.jpg 2x
+                      "
+                      media="(min-width:768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img@2x.jpg 2x
+                      "
+                      media="(min-width:320px)"
+                    />
+
+                    <img
+                      src="./images/mobile-portfolio/mobile-img.jpg"
+                      alt="banking app"
+                      width="360"
+                      height="300"
+                    />
+                  </picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -116,12 +141,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card2.jpg"
-                    alt="cashless payment"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img2.jpg    1x,
+                        ./images/desktop-portfolio/desk-img2@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img2.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img2@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img2.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img2@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img2.jpg"
+                      alt="cashless payment"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -137,12 +182,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card3.jpg"
-                    alt="meditation app"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img3.jpg    1x,
+                        ./images/desktop-portfolio/desk-img3@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img3.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img3@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img3.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img3@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img3.jpg"
+                      alt="meditation app"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -158,12 +223,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card4.jpg"
-                    alt="taxi service"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img4.jpg    1x,
+                        ./images/desktop-portfolio/desk-img4@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img4.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img4@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img4.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img4@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img4.jpg"
+                      alt="taxi service"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -179,12 +264,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card5.jpg"
-                    alt="screen illustrations"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img5.jpg    1x,
+                        ./images/desktop-portfolio/desk-img5@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img5.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img5@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img5.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img5@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img5.jpg"
+                      alt="screen illustrations"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -200,12 +305,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card6.jpg"
-                    alt="online courses"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img6.jpg    1x,
+                        ./images/desktop-portfolio/desk-img6@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img6.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img6@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img6.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img6@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img6.jpg"
+                      alt="online courses"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -221,12 +346,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card7.jpg"
-                    alt="instagramm stories concept"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img7.jpg    1x,
+                        ./images/desktop-portfolio/desk-img7@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img7.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img7@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img7.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img7@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img7.jpg"
+                      alt="instagramm stories concept"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -242,12 +387,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card8.jpg"
-                    alt="organic food"
-                    width="360"
-                    height="300"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img8.jpg    1x,
+                        ./images/desktop-portfolio/desk-img8@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img8.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img8@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img8.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img8@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img8.jpg"
+                      alt="organic food"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -263,12 +428,32 @@
             <li class="app-items">
               <a class="app-link" href="">
                 <div class="app-image">
-                  <img
-                    src="./images/project-card9.jpg"
-                    alt="fresh coffe"
-                    width="360"
-                    height="300"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/desktop-portfolio/desk-img9.jpg    1x,
+                        ./images/desktop-portfolio/desk-img9@2x.jpg 2x
+                      "
+                      media="(min-width:1158px)" />
+                    <source
+                      srcset="
+                        ./images/tablet-portfolio/tablet-img9.jpg    1x,
+                        ./images/tablet-portfolio/tablet-img9@2x.jpg 2x
+                      "
+                      media="(min-width:768px)" />
+                    <source
+                      srcset="
+                        ./images/mobile-portfolio/mobile-img9.jpg    1x,
+                        ./images/mobile-portfolio/mobile-img9@2x.jpg 2x
+                      "
+                      media="(min-width:320px)" />
+                    <img
+                      src="./images/mobile-portfolio/mobile-img9.jpg"
+                      alt="fresh coffe"
+                      width="360"
+                      height="300"
+                  /></picture>
+
                   <p class="app-image-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
